dataset/local/tf_s3_server_access_logging/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: enable-s3-server-access-logging
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: enable-s3-server-access-logging
    kind: Plan
    resources:
      - good-plan
    result: pass
  - policy: enable-s3-server-access-logging
    kind: Plan
    resources:
      - bad-plan
    result: fail
